Fix color contrast issues with feature options buttons
Fixes: CNVS-33628

Test Plan:
 - As an admin/site admin, navigate to your account ->
   Settings -> Feature Options

 - The button toggles for 'Off' 'Allow' 'On' previously
   did not meet the 4.5:1 contrast ratio for high contrast

 - Now they should meet contrast requirements

Reviewed-on: https://gerrit.instructure.com/96927
Tested-by: Jenkins
QA-Review: Dan Sasaki
Product-Review: Pam Hiett <phiett@instructure.com>

--- a/app/stylesheets/pages/shared/_feature_flags.scss
+++ b/app/stylesheets/pages/shared/_feature_flags.scss
@@ -87,9 +87,9 @@ $left-offset:  16px;
   text-decoration: underline;
 }
 
-$switch-background: lighten($ic-color-dark, 15%);
+$switch-background: $ic-color-medium-darker;
 $switch-background-disabled: lighten($switch-background, 40%);
-$switch-text: rgba($ic-color-light, 0.6);
+$switch-text: rgba($ic-color-light, 0.8);
 
 .ff-background {
   display: inline-block;
